Test Cases/V2/Test Case/Tests/TT-238 - VTO/Test Cases/Negative/TT_238_1_InputCompanyName.tc
<?xml version="1.0" encoding="UTF-8"?>
<TestCaseEntity>
   <description></description>
   <name>TT_238_1_InputCompanyName</name>
   <tag></tag>
   <comment></comment>
   <testCaseGuid>a0095656-1105-44df-bde7-e9b5e7dc089e</testCaseGuid>
</TestCaseEntity>
